Fixed horizontal alignment of no draft graphic

--- a/webapp/channels/src/components/drafts/drafts.scss
+++ b/webapp/channels/src/components/drafts/drafts.scss
@@ -17,6 +17,7 @@
         display: flex;
         overflow: auto;
         height: 100%;
+        width: 100%;
         flex-flow: column nowrap;
         padding: 24px;
         grid-area: list;
